<resources>
    <string name="app_name">Book Cloud</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login_or_register">Login or Register</string>
    <string name="john_doe">John Doe</string>
    <string name="johndoe_example_com">johndoe@example.com</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="history">History</string>
    <string name="messages">Messages</string>
    <string name="my_book">My Book</string>
    <string name="help">Help</string>
    <string name="profile_picture">profile picture</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="login_to_book_cloud">Login to Book Cloud</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register Here</string>
    <string name="sign_up_for_book_cloud">Sign up for Book Cloud</string>
    <string name="login_with_facebook">Log in with Facebook</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="confirm_password">Comfirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_to_book_cloud">Sign In to Book Cloud</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login Here</string>
    <string name="full_name">Full Name</string>
    <string name="log_out">Log Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="action_sign_out">Sign Out</string>

    <!--facebook app id-->
    <string name="facebook_app_id">1689369418031507</string>
    <string name="fb_login_protocol_scheme">fb1689369418031507</string>
    <string name="demo_distance">5 miles from you</string>
    <string name="demo_writer">Sun Tzu</string>
    <string name="demo_book_name">THE ART OF WAR</string>
    <string name="demo_price">৳200</string>
    <string name="add_later">add later</string>
    <string name="buy_now">buy now</string>

    <string name="select_a_book_cover_photo" >Select a book cover photo</string>
    <string name="book_title">Title</string>
    <string name="book_author">Author</string>
    <string name="short_description">Short Description</string>
    <string name="book_isbn">Isbn</string>

    <string name="book_offer">Choose an offer</string>
    <string-array name="book_offers">
        <item>Sell</item>
        <item>Rent</item>
    </string-array>

    <string name="book_condition">Book Condition</string>
    <string name="add">Add Book</string>
    <string name="search_title">Search Book</string>
    <string name="search_hint">Search Books</string>
    <string name="bdt">৳</string>
    <string name="current_book_list">BOOKS</string>
    <string name="search_items">SEARCH LIST</string>
    <string-array name="book_conditions">
        <item>Good</item>
        <item>Fair</item>
        <item>Poor</item>
    </string-array>


</resources>
