<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_my_books"
            android:icon="@drawable/ic_my_books"
            android:title="@string/my_book" />
        <item
            android:id="@+id/action_messages"
            android:icon="@drawable/ic_messages"
            android:title="@string/messages" />
        <item
            android:id="@+id/action_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
        <item
            android:id="@+id/action_manage_profile"
            android:icon="@drawable/ic_manage_profile"
            android:title="@string/manage_profile" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/setting" />
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
        <item
            android:id="@+id/action_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />

    </group>

</menu>
