<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorAccent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/image_view_profile"
        android:layout_width="@dimen/avatar_width"
        android:layout_height="@dimen/avatar_height"
        android:layout_marginBottom="@dimen/navigation_image_margin_bottom"
        android:layout_marginTop="@dimen/navigation_image_margin_top"
        android:contentDescription="@string/profile_picture"
        app:srcCompat="@mipmap/ic_book_cloud_round" />

    <Button
        android:id="@+id/btn_log_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_or_register" />

    <TextView
        android:id="@+id/text_user_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/john_doe"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_user_identity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:text="@string/johndoe_example_com"
        android:visibility="gone" />

</LinearLayout>
