<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:layout_weight="1.5"
        android:background="@drawable/ic_demo_book"
        android:scaleType="centerInside" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:gravity="start|center"
            android:maxLines="1"
            android:text="@string/demo_book_name"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/ic_author" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:ellipsize="end"
                android:gravity="start|top"
                android:maxLines="1"
                android:text="@string/demo_writer"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/ic_location_arrow"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="start|center"
                android:maxLines="1"
                android:text="@string/demo_distance"
                android:textSize="8sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/price_tag_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/demo_price"
            android:textStyle="italic|bold" />

        <Button
            android:id="@+id/add_later_recycle_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/add_later"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buy_now_recycle_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/buy_now"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>