<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="12dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_title" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_author" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_book_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/short_description" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_book_isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_isbn"
                android:inputType="number"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_book_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="price"
                android:inputType="number"/>

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">
            <Spinner
                android:id="@+id/spinner_offers"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:background="@drawable/spinner_background"
                android:entries="@array/book_offers"
                android:prompt="@string/book_offer"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_down"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">
            <Spinner
                android:id="@+id/spinner_book_condition"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:background="@drawable/spinner_background"
                android:entries="@array/book_conditions"
                android:prompt="@string/book_condition"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_down"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/spinner_background">
            <TextView
                android:id="@+id/tv_book_image_title"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/image_button_book_cover"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:text="@string/select_a_book_cover_photo" />

            <ImageView
                android:id="@+id/image_view_book_cover"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:layout_alignParentStart="true"
                android:visibility="gone"/>

            <ImageButton
                android:id="@+id/image_button_book_cover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:src="@android:drawable/ic_menu_gallery"
                android:tint="@android:color/darker_gray"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_book_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/add" />
    </LinearLayout>
</ScrollView>